--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,7 +25,7 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end pe-5" id="navbarNav">
                     <ul class="navbar-nav gap-5">
-                        <li class="nav-item ">
+                        <li class="nav-item">
                             <a class="nav-link" href="../pages/productos.html">PRODUCTOS</a>
                         </li>
                         <li class="nav-item">
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+                            <a class="nav-link nav-active" href="../pages/contacto.html">CONTACTO</a>
                         </li>
                     </ul>
                 </div>
