--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="../pages/productos.html">PRODUCTOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
+                            <a class="nav-link nav-active" href="../pages/nosotros.html">NOSOTROS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
