--- a/pages/productos.html
+++ b/pages/productos.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse justify-content-end pe-5" id="navbarNav">
                     <ul class="navbar-nav gap-5">
                         <li class="nav-item ">
-                            <a class="nav-link" href="../pages/productos.html">PRODUCTOS</a>
+                            <a class="nav-link nav-active" href="../pages/productos.html">PRODUCTOS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
