--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
+                            <a class="nav-link nav-active" href="../pages/servicios.html">SERVICIOS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
