--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                     <img src="./assets/carousel_2.jpg" class="d-block w-100" alt="...">
                     <div class="custom-caption">
                         <h2>VENTANAS EFICICIENTES</h2>
-                        <p>Las propiedades del PVC junto con vidrios de alto rendimiento maximizan <br> el ahorro energético y la aislación acústica.</p>
+                        <p>Las propiedades del PVC junto con vidrios de alto rendimiento maximizan <br> el ahorro
+                            energético y la aislación acústica.</p>
                     </div>
                 </div>
                 <div class="carousel-item third-slide">
@@ -89,7 +90,35 @@
             </button>
         </div>
         <!-- TITULO -->
-        <h1 class="p-3 text-center"> <span class="fw-bold">VENTIMIGLIA</span> LIDERES EN ABERTURAS DE ULTIMA GENERACION</h1>
+        <h1 class="title-home p-3 text-center">
+            <span class="fw-bold">VENTIMIGLIA</span> LIDERES EN ABERTURAS DE ULTIMA GENERACION
+        </h1>
+
+        <!-- CARDS -->
+        <div class="container">
+            <h2 class="title-cards">¿Qué buscas?</h2>
+            <div class="d-flex gap-5 justify-content-evenly align-items-center m-5">
+                <!-- CARD 1 -->
+                <div class="card" style="width: 40rem;">
+                    <img src="./assets/home_1.jpg" class="card-img-top card-image" alt="Ventanas">
+                    <div class="card-body d-flex justify-content-center">
+                        <a href="#">
+                            <button class="btn-green">VENTANAS</button>
+                        </a>
+                    </div>
+                </div>
+                <!-- CARD 2 -->
+                <div class="card" style="width: 40rem;">
+                    <img src="./assets/home_2.jpg" class="card-img-top card-image" alt="Aberturas">
+                    <div class="card-body d-flex justify-content-center">
+                        <a href="#">
+                            <button class="btn-green">ABERTURAS</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </main>
 
 
