--- a/index.html
+++ b/index.html
@@ -118,10 +118,13 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- ESCRIBINOS -->
+        <!-- ESCRIBINOS -->
+        <div class="container">
             <h2 class="title-cards">Escribinos</h2>
             <div class="form-container">
+                <!-- PARA CONFIGURAR EL FORM CON EL MAIL DEL CLIENTE, REGISTRARSE Y CAMBIAR EL ACTION DE "form" CON EL ID DEL CLIENTE -->
                 <form id="form" action="https://formspree.io/f/xpwzzzwb" method="POST"
                     onsubmit="return validateCaptcha();">
                     <div class="mb-3">
@@ -151,15 +154,13 @@
                     <!-- WIDGET DE CAPTCHA -->
                     <div class="g-recaptcha d-flex justify-content-center"
                         data-sitekey="6LeA214qAAAAAI0yeSz3r8OB3zIMKX4FneO1ehA6"></div>
-
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn-green">Enviar</button>
                     </div>
-
                 </form>
             </div>
-
         </div>
+
     </main>
 
     <footer>
