--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -47,9 +47,45 @@
         <h1 class="m-5 text-center">SECCIÓN SERVICIOS EN CONSTRUCCION</h1>
     </main>
 
+    <footer>
+        <h2> AVERTURAS VENTIMIGLIA</h2>
+        <div class="footer-container">
+            <div>
+                <div>
+                    <h5>OFFICE QUATRO - Of. 317, 3er Piso</h5>
+                    <p>Av. 12 de Octubre Km 43.5, B1664, Manuel Alberti, Prov. de Buenos Aires</p>
+                </div>
+                <div>
+                    <h5>DIRECCION PARAGUAY</h5>
+                    <p>Avenida / calle, numero, Ciudad, Localidad</p>
+                </div>
+            </div>
+            <div>
+                <h5>DIRECTOR COMERCIAL</h5>
+                <p>spbrunetti@yahoo.com.ar</p>
+                <p>+54 9 11 3032 - 6155</p>
+                <p>+1 (305) 407 - 0221</p>
+            </div>
+            <div>
+                <div>
+                    <h5>PRODUCTOS</h5>
+                    <p>Aberturas</p>
+                    <p>Ventanas</p>
+                </div>
+                <div>
+                    <h5>NOSOTROS</h5>
+                    <p>Nuestra Historia</p>
+                    <p>Mision y Vision</p>
+                    <p>Trabaja con Nosotros</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
+    <script src="../main.js"></script>
 </body>
 </html>
