--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="../assets/ISO_COLOR.png" type="image/x-icon">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <title>Aberturas Ventimiglia</title>
 </head>
 
@@ -44,11 +45,96 @@
     </header>
 
     <main>
-        <h1 class="m-5 text-center">SECCIÓN CONTACTO EN CONSTRUCCION</h1>
+        <h1 class="m-5 text-center">CONTACTANOS</h1>
+        <div class="form-container">
+            <!-- PARA CONFIGURAR EL FORM CON EL MAIL DEL CLIENTE, REGISTRARSE Y CAMBIAR EL ACTION DE "form" CON EL ID DEL CLIENTE -->
+            <form id="form" action="https://formspree.io/f/xpwzzzwb" method="POST" onsubmit="return validateCaptcha();">
+                <div class="mb-3">
+                    <label for="firstName" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="firstName" name="first-name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="lastName" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" id="lastName" name="last-name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp"
+                        required>
+                    <div id="emailHelp" class="form-text">Nunca compartiremos tu email con nadie más.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="phone" class="form-label">Número de contacto sin espacios</label>
+                    <input type="tel" class="form-control" id="phone" name="phone" required
+                        onkeypress="return allowOnlyNumbers(event)">
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                </div>
+
+                <!-- WIDGET DE CAPTCHA -->
+                <div class="g-recaptcha d-flex justify-content-center"
+                    data-sitekey="6LeA214qAAAAAI0yeSz3r8OB3zIMKX4FneO1ehA6"></div>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn-green">Enviar</button>
+                </div>
+            </form>
+        </div>
+        <div class="contact-container">
+            <h2>DIRECCION</h2>
+            <div>
+                <h4>OFFICE QUATRO - Of. 317, 3er Piso</h4>
+                <p>Av. 12 de Octubre Km 43.5, B1664, Manuel Alberti, Prov. de Buenos Aires</p>
+            </div>
+            <div>
+                <h4>DIRECCION PARAGUAY</h4>
+                <p>Avenida / calle, numero, Ciudad, Localidad</p>
+            </div>
+        </div>
+
     </main>
+
+    <footer>
+        <h2> AVERTURAS VENTIMIGLIA</h2>
+        <div class="footer-container">
+            <div>
+                <div>
+                    <h5>OFFICE QUATRO - Of. 317, 3er Piso</h5>
+                    <p>Av. 12 de Octubre Km 43.5, B1664, Manuel Alberti, Prov. de Buenos Aires</p>
+                </div>
+                <div>
+                    <h5>DIRECCION PARAGUAY</h5>
+                    <p>Avenida / calle, numero, Ciudad, Localidad</p>
+                </div>
+            </div>
+            <div>
+                <h5>DIRECTOR COMERCIAL</h5>
+                <p>spbrunetti@yahoo.com.ar</p>
+                <p>+54 9 11 3032 - 6155</p>
+                <p>+1 (305) 407 - 0221</p>
+            </div>
+            <div>
+                <div>
+                    <h5>PRODUCTOS</h5>
+                    <p>Aberturas</p>
+                    <p>Ventanas</p>
+                </div>
+                <div>
+                    <h5>NOSOTROS</h5>
+                    <p>Nuestra Historia</p>
+                    <p>Mision y Vision</p>
+                    <p>Trabaja con Nosotros</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
+    <script src="../main.js"></script>
 </body>
+
 </html>
