--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -44,7 +44,64 @@
     </header>
 
     <main>
-        <h1 class="m-5 text-center">SECCIÓN NOSOTROS EN CONSTRUCCION</h1>
+        <h1 class="m-5 text-center">NOSOTROS</h1>
+        <div class="container nosotros-container">
+            <div class="historia-container">
+                <h2>Nuestra Historia</h2>
+                <p>
+                    En Ventimiglia Aberturas llevamos más de 20 años ofreciendo soluciones innovadoras en ventanas,
+                    puertas y vidrios. Nos enfocamos en brindar las últimas tecnologías que mejoran la seguridad,
+                    eficiencia y confort en cada espacio, adaptándonos a las necesidades de nuestros clientes.
+                </p>
+            </div>
+            <div class="mision-vision-container">
+                <div class="mision">
+                    <h2>Misión</h2>
+                    <p>
+                        Proveer aberturas de calidad superior, integrando tecnología de punta para crear espacios
+                        seguros, eficientes y estéticamente atractivos.
+                    </p>
+                </div>
+                <div class="vision">
+                    <h2>Visión</h2>
+                    <p>
+                        Ser líderes en el sector de aberturas, reconocidos por nuestra innovación, excelencia y
+                        compromiso con la satisfacción del cliente.
+                    </p>
+                </div>
+            </div>
+            
+            <h2 class="text-center pb-5">Nuestros Valores</h2>
+            <div class="valores-card-container">    
+                <div class="card valores-card" style="width: 18rem;">
+                    <img src="../assets/compromiso.png" class="card-img-top" alt="comromiso">
+                    <div class="card-body text-center">
+                        <h5>Compromiso</h5>
+                        <p class="card-text">
+                            Trabajamos junto a nuestros clientes para superar sus expectativas
+                        </p>
+                    </div>
+                </div>
+                <div class="card valores-card" style="width: 18rem;">
+                    <img src="../assets/calidad.png" class="card-img-top" alt="calidad">
+                    <div class="card-body text-center">
+                        <h5>Calidad</h5>
+                        <p class="card-text">
+                            Garantizamos productos duraderos y eficientes.
+                        </p>
+                    </div>
+                </div>
+                <div class="card valores-card" style="width: 18rem;">
+                    <img src="../assets/innovacion.png" class="card-img-top" alt="innovacion">
+                    <div class="card-body text-center">
+                        <h5>Innovación</h5>
+                        <p class="card-text">
+                            Aplicamos lo último en tecnología para ofrecer soluciones vanguardistas.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -83,9 +140,9 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
     <script src="../main.js"></script>
 </body>
+
 </html>
