pagina productos, delete servicios y fix de rutas nav

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                             <a class="nav-link" href="./pages/nosotros.html">NOSOTROS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/servicios.html">SERVICIOS</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
                         </li>
                     </ul>
@@ -103,7 +100,7 @@
                 <div class="card" style="width: 40rem;">
                     <img src="./assets/home_1.jpg" class="card-img-top card-image" alt="Ventanas">
                     <div class="card-body d-flex justify-content-center">
-                        <a href="#">
+                        <a href="./pages/ventanas.html">
                             <button class="btn-green">VENTANAS</button>
                         </a>
                     </div>
@@ -112,7 +109,7 @@
                 <div class="card" style="width: 40rem;">
                     <img src="./assets/home_2.jpg" class="card-img-top card-image" alt="Aberturas">
                     <div class="card-body d-flex justify-content-center">
-                        <a href="#">
+                        <a href="./pages/aberturas.html">
                             <button class="btn-green">ABERTURAS</button>
                         </a>
                     </div>
