--- a/pages/productos.html
+++ b/pages/productos.html
@@ -32,9 +32,6 @@
                             <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
                         </li>
                     </ul>
@@ -44,7 +41,39 @@
     </header>
 
     <main>
-        <h1 class="m-5 text-center">SECCIÓN PRODUCTOS EN CONSTRUCCION</h1>
+        <h1 class="m-5 text-center">PRODUCTOS</h1>
+
+        <div class="d-flex gap-5 justify-content-evenly align-items-center m-5">
+            <!-- CARD 1 -->
+            <div class="card" style="width: 28rem;">
+                <img src="../assets/home_1.jpg" class="card-img-top card-image" alt="Ventanas">
+                <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                    <a href="#">
+                        <button class="btn-green">VENTANAS</button>
+                    </a>
+                    <ul class="me-5">
+                        <li class="font-larger">Mamparas</li>
+                        <li class="font-larger">VIIO</li>
+                        <li class="font-larger">EkoGlass</li>
+                        <li class="font-larger">Blindex</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- CARD 2 -->
+            <div class="card" style="width: 28rem;">
+                <img src="../assets/ventanal.png" class="card-img-top card-image" alt="Aberturas">
+                <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                    <a href="#">
+                        <button class="btn-green">ABERTURAS</button>
+                    </a>
+                    <ul class="me-5 pb-5">
+                        <li class="font-larger">PVC - Rehau</li>
+                        <li class="font-larger">Aberturas de Aluminio</li>
+                        <li class="font-larger">Aberturas de Aluminio RPT</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -83,9 +112,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
     <script src="../main.js"></script>
 </body>
 
