--- a/pages/productos.html
+++ b/pages/productos.html
@@ -48,7 +48,7 @@
             <div class="card" style="width: 28rem;">
                 <img src="../assets/home_1.jpg" class="card-img-top card-image" alt="Ventanas">
                 <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="../pages/ventanas.html">
                         <button class="btn-green">VENTANAS</button>
                     </a>
                     <ul class="me-5">
@@ -63,10 +63,10 @@
             <div class="card" style="width: 28rem;">
                 <img src="../assets/ventanal.png" class="card-img-top card-image" alt="Aberturas">
                 <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="../pages/aberturas.html">
                         <button class="btn-green">ABERTURAS</button>
                     </a>
-                    <ul class="me-5 pb-5">
+                    <ul class="me-5">
                         <li class="font-larger">PVC - Rehau</li>
                         <li class="font-larger">Aberturas de Aluminio</li>
                         <li class="font-larger">Aberturas de Aluminio RPT</li>
